<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GLOW</string>

    <string name="drawer_share">App teilen</string>
    <string name="drawer_newsletter">Newsletter anfragen</string>
    <string name="drawer_shop">Shop besuchen</string>
    <string name="drawer_settings">Einstellungen</string>

    <string name="contact_email_chooserTitle">GLOW eine Email schicken…</string>
    <string name="contact_email_subject">GLOW Anfrage</string>

    <string name="newsletter_mail_subject">GLOW Newsletter Anfrage</string>
    <string name="newsletter_mail_hello">Liebes GLOW Team,</string>
    <string name="newsletter_mail_message">ich habe Interesse am GLOW Newsletter. Bitte meldet mich dafür an. Vielen Dank! </string>
    <string name="newsletter_mail_bye">Mit besten Grüßen</string>

    <string name="share_menu_general_help">Allgemeine Ratschläge</string>
    <string name="share_menu_general_mindset">GLOW Haltung</string>
    <string name="share_menu_general_mindset_read_title"><b>Lesen</b>\nLese zuerst selber die Flyer.</string>
    <string name="share_menu_general_mindset_location_title"><b>Lagerort</b>\nLagere deine Flyer an einem gut sichtbaren Ort in deinem Zuhause/Auto.</string>
    <string name="share_menu_general_mindset_pray_title"><b>Beten</b>\nBete um von Gott eingeleitete Begegnungen.</string>
    <string name="share_menu_general_mindset_plan_title"><b>Plane</b>\nPlane dein Zuhause immer mit ein paar Stück Literatur zu verlassen.</string>
    <string name="share_menu_general_mindset_handout_title"><b>Verteilen</b>\nTeile diese persönlich mit anderen oder hinterlasse sie.</string>

    <string name="share_menu_general_say">Was Sagen?</string>
    <string name="share_menu_general_say_one">\"Lesen Sie gerne? …\"</string>
    <string name="share_menu_general_say_two">\"Hier, ein kleines Geschenk für Sie …\"</string>
    <string name="share_menu_general_say_three">\"Hier ist ein kleines Stück christliche Literatur das ich sehr genossen habe …\"</string>

    <string name="share_menu_general_ways">Arten zu Teilen</string>
    <string name="share_menu_general_ways_1"><b>Gaststätte: </b>zum Trinkgeld</string>
    <string name="share_menu_general_ways_2"><b>Tankstellen: </b>auf die Zapfsäule</string>
    <string name="share_menu_general_ways_3"><b>Unterkünfte: </b>in Gideon Bibeln, Telefonbücher, als Trinkgeld</string>
    <string name="share_menu_general_ways_4"><b>Briefe: </b>gewöhnlichem Briefverkehr dazulegen</string>
    <string name="share_menu_general_ways_5"><b>Supermärkte: </b> in den Einkaufswagen oder als Geschenk an der Kasse</string>
    <string name="share_menu_general_ways_5_1"><b>Unterwegs: </b> im Flugzeug in die Sitztasche oder im Zug</string>
    <string name="share_menu_general_ways_5_2"><b>Feiertage: </b> an Halloween verteilen</string>
    <string name="share_menu_general_ways_6"><b>Öffentliche Toiletten</b></string>
    <string name="share_menu_general_ways_7"><b>Wartezimmer</b></string>
    <string name="share_menu_general_ways_8"><b>In der Nachbarschaft</b></string>

    <string name="share_menu_general_sponsor">Sponsor einen GLOW Ständer</string>
    <string name="share_menu_general_sponsor_text"><b>Sponsor einen GLOW Ständer an einem öffentlichen Ort.</b>\n(Waschsalon, Arzt Praxis, Amt, christlicher Bücherladen, etc.)</string>


    <string name="share_menu_tract_help">Flyer Leitfaden</string>
    <string name="share_menu_tract_share">Link teilen</string>

    <string name="share_app_text">Hallo,\n\nich möchte eine App mit dir teilen. Du findest sie im Play Store unter folgendem Link: </string>
    <string name="share_tract_text">Hallo,\n\nich möchte etwas mit dir teilen. Folge einfach diesem Link und sag mir, was du davon hältst: </string>
    <string name="share_regards">Beste Grüße</string>

    <string name="info_title">GLOW für Android</string>

    <string name="alert_loading">Laden…</string>
    <string name="alert_Ok">OK</string>
    <string name="alert_No">Nein</string>
    <string name="alert_thanks">Danke</string>
    <string name="alert_share">Teilen</string>
    <string name="alert_cancel">Abbrechen</string>
    <string name="alert_info">Hinweis</string>


    <string name="share_app_dialog_title">App teilen</string>
    <string name="share_tract_dialog_title">Flyer teilen</string>

    <string name="scroll_page_dialog_message">Benutze deinen Lautstärkeregler um im der Auswahl oder dem Flyer zu blättern.</string>
    <string name="scroll_page_dialog_volume_up">Seite zurück blättern.</string>
    <string name="scroll_page_dialog_volume_down">Seite vor blättern.</string>
    <string name="scroll_page_dialog_understood">Verstanden</string>*


    <!-- Strings related to Settings -->
    <string name="check_user_type_title">Hallo lieber Nutzer!</string>
    <string name="check_user_type_message">Bist du ein Glow Flyer Verteiler oder ließt du diese nur? Keine Sorge, diese Information dient nur dazu, gewisse Funktionen für Verteiler zu aktivieren und ist nur für dich einsehbar. Du kannst diese Einstellung jederzeit in den Einstellungen verändern.</string>
    <string name="check_user_type_reader">Leser</string>
    <string name="check_user_type_distributor">Leser &amp; Verteiler</string>


    <!-- Example General settings -->
    <string name="pref_general">Allgemein</string>

    <string name="pref_general_user_type">Benutzer</string>
    <string-array name="pref_general_user_type_titles">
        <item>Verteiler</item>
        <item>Leser</item>
    </string-array>
    <string-array name="pref_general_user_type_values">
        <item>DISTRIBUTOR</item>
        <item>READER</item>
    </string-array>

    <string name="pref_general_color_theme">Farben</string>
    <string-array name="pref_general_color_theme_title">
        <item>Hell</item>
        <item>Dunkel</item>
    </string-array>
    <string-array name="pref_general_color_theme_values">
        <item>LIGHT</item>
        <item>DARK</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_notifications">Erinnerungen</string>

    <string name="pref_notifications_enable">Erinnere mich</string>
    <string name="pref_notifications_enable_summary">Zeige regemäßig Glow Erinnerungen.</string>

    <string name="pref_notifications_frequency">Häufigkeit</string>
    <string-array name="pref_notifications_frequency_titles">
        <item>täglich</item>
        <item>wöchentlich</item>
    </string-array>
    <string-array name="pref_notifications_frequency_values">
        <item>DAILY</item>
        <item>WEEKLY</item>
    </string-array>

    <string name="pref_notifications_time">Uhrzeit</string>

    <string name="pref_notifications_weekday">Wochentag</string>
    <string-array name="pref_notifications_weekday_titles">
        <item>Samstag</item>
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
        <item>Sonntag</item>
    </string-array>
    <string-array name="pref_notifications_weekday_values">
        <item>SATURDAY</item>
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SUNDAY</item>
    </string-array>

    <string name="pref_notification_toast">Nächste Benachrichtigung: </string>

    <string name="notification_title">Denk dran…</string>
    <string name="notification_message">…heute Glow Fyler zu verteilen :)</string>

    <string name="notification_deactivate">Deaktivieren</string>
    <string name="notification_open_app">App öffnen</string>
    <string name="notification_deactivate_toast">Erinnerungen wurden deaktiviert.</string>


</resources>
