<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="NOTIFICATION_ENABLED"
        android:summary="@string/pref_notifications_enable_summary"
        android:title="@string/pref_notifications_enable"/>

    <ListPreference
        android:defaultValue="WEEKLY"
        android:icon="@drawable/ic_cached"
        android:entries="@array/pref_notifications_frequency_titles"
        android:entryValues="@array/pref_notifications_frequency_values"
        android:key="NOTIFICATION_FREQUENCY"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_notifications_frequency" />

    <Preference
        android:defaultValue="6:00"
        android:title="@string/pref_notifications_time"
        android:icon="@drawable/ic_schedule"
        android:key="NOTIFICATION_TIME"/>

    <ListPreference
        android:icon="@drawable/ic_event"
        android:defaultValue="SATURDAY"
        android:entries="@array/pref_notifications_weekday_titles"
        android:entryValues="@array/pref_notifications_weekday_values"
        android:key="NOTIFICATION_WEEKDAY"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_notifications_weekday" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
