<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/more_newsletter_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:layout_marginTop="8dp"
        android:background="@drawable/drawer_button_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="@dimen/button_default"
            android:layout_height="@dimen/button_default"
            android:alpha="@dimen/button_alpha"
            android:src="@drawable/ic_action_inbox" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/drawer_newsletter"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/more_shop_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:background="@drawable/drawer_button_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="@dimen/button_default"
            android:layout_height="@dimen/button_default"
            android:alpha="@dimen/button_alpha"
            android:src="@drawable/ic_action_credit_card" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/drawer_shop"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/more_share_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:background="@drawable/drawer_button_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="@dimen/button_default"
            android:layout_height="@dimen/button_default"
            android:alpha="@dimen/button_alpha"
            android:src="@drawable/ic_share_drawer" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/drawer_share"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.25"
        android:background="@color/colorPrimary" />


    <LinearLayout
        android:id="@+id/more_settings_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:background="@drawable/drawer_button_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="@dimen/button_default"
            android:layout_height="@dimen/button_default"
            android:alpha="@dimen/button_alpha"
            android:src="@drawable/ic_settings" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/drawer_settings"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>